force-app/main/default/objects/Payment__c/fields/CardType__c.field-meta.xml
<CustomField>
    <fullName>CardType__c</fullName>
    <label>Card Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>