force-app/main/default/objects/Payment__c/fields/CheckNumber__c.field-meta.xml
<CustomField>
    <fullName>CheckNumber__c</fullName>
    <label>Check Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>