force-app/main/default/objects/Payment__c/fields/IsNotificationOff__c.field-meta.xml
<CustomField>
    <fullName>IsNotificationOff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Notification Off</label>
    <type>Checkbox</type>
</CustomField>