force-app/main/default/objects/Payment__c/fields/ParentPayment__c.field-meta.xml
<CustomField>
    <fullName>ParentPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>