force-app/main/default/objects/Payment__c/fields/ParentPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>ParentPaymentAmount__c</fullName>
    <formula>ParentPayment__r.PaymentAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>