force-app/main/default/objects/Payment__c/fields/PaymentCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentCreatedDate__c</fullName>
    <formula>CreatedDate</formula>
    <label>Payment Date</label>
    <type>DateTime</type>
</CustomField>