force-app/main/default/objects/Payment__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
                <color>#006600</color>
                <label>Cash</label>
            </value>
            <value>
                <fullName>CreditCard</fullName>
                <color>#996633</color>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>DebitCard</fullName>
                <color>#EFAE73</color>
                <label>Debit Card</label>
            </value>
            <value>
                <fullName>Wire</fullName>
                <color>#663366</color>
                <label>Wire</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
                <color>#AFCADF</color>
                <label>Check</label>
            </value>
            <value>
                <fullName>Bulletin de Versement</fullName>
                <isActive>false</isActive>
                <label>Bulletin de Versement</label>
            </value>
            <value>
                <fullName>Credit Card Old</fullName>
                <isActive>false</isActive>
                <label>Credit Card Old</label>
            </value>
            <value>
                <fullName>ECheck</fullName>
                <isActive>false</isActive>
                <label>E-Check</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>