force-app/main/default/objects/Payment__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment</fullName>
                <default>true</default>
                <label>Payment</label>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>ActivationFee</fullName>
                <isActive>false</isActive>
                <label>Activation Fee</label>
            </value>
            <value>
                <fullName>Application Fee</fullName>
                <isActive>false</isActive>
                <label>Application Fee</label>
            </value>
            <value>
                <fullName>Application Fee Refund</fullName>
                <isActive>false</isActive>
                <label>Application Fee Refund</label>
            </value>
            <value>
                <fullName>EventFees</fullName>
                <isActive>false</isActive>
                <label>Event Fees</label>
            </value>
            <value>
                <fullName>KokuaCrewAppFee</fullName>
                <isActive>false</isActive>
                <label>Kokua Crew App Fee</label>
            </value>
            <value>
                <fullName>Kokua Crew Fees</fullName>
                <isActive>false</isActive>
                <label>Kokua Crew Fees</label>
            </value>
            <value>
                <fullName>MealCredit</fullName>
                <isActive>false</isActive>
                <label>Meal Credit</label>
            </value>
            <value>
                <fullName>Overpayment</fullName>
                <isActive>false</isActive>
                <label>Overpayment</label>
            </value>
            <value>
                <fullName>School Fees</fullName>
                <isActive>false</isActive>
                <label>School Fees</label>
            </value>
            <value>
                <fullName>StaffAppFee</fullName>
                <isActive>false</isActive>
                <label>Staff App Fee</label>
            </value>
            <value>
                <fullName>StaffFees</fullName>
                <isActive>false</isActive>
                <label>Staff Fees</label>
            </value>
            <value>
                <fullName>StaffPayment</fullName>
                <isActive>false</isActive>
                <label>Staff Payment</label>
            </value>
            <value>
                <fullName>StudentAppFee</fullName>
                <isActive>false</isActive>
                <label>Student App Fee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>