force-app/main/default/objects/Payment__c/fields/Service_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Invoice_Number__c</fullName>
    <formula>Service__r.Invoice_Number__c</formula>
    <label>Service Invoice Number</label>
    <type>Text</type>
</CustomField>