force-app/main/default/objects/Payment__c/fields/ServiceInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>ServiceInvoiceNumber__c</fullName>
    <formula>Service__r.Invoice_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Invoice Number</label>
    <type>Text</type>
</CustomField>