force-app/main/default/objects/Payment__c/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <formula>Service__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Name</label>
    <type>Text</type>
</CustomField>