force-app/main/default/objects/Payment__c/fields/Total_Amount_incl_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_incl_Fee__c</fullName>
    <formula>FeeAmount__c +  PaymentAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (incl. Fee)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>