force-app/main/default/objects/Payment__c/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <label>Transaction ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>