force-app/main/default/objects/Payment__c/fields/Web_Portal_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Web_Portal_Invoice_Number__c</fullName>
    <label>Web Portal Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>