force-app/main/default/objects/Payment__c/fields/Web_Portal_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Web_Portal_Payment_ID__c</fullName>
    <label>Web Portal Payment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>