force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PaymentType__c</columns>
    <columns>Status__c</columns>
    <columns>TransactionId__c</columns>
    <columns>PaymentAmount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ServiceName__c</columns>
    <columns>CardLast4Digits__c</columns>
    <columns>CardType__c</columns>
    <columns>CheckNumber__c</columns>
    <columns>PaymentMethod__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>