force-app/main/default/objects/Payment__c/listViews/All_Todd_Test.listView-meta.xml
<ListView>
    <fullName>All_Todd_Test</fullName>
    <columns>NAME</columns>
    <columns>PaymentType__c</columns>
    <columns>Payee_Type__c</columns>
    <columns>Status__c</columns>
    <columns>TransactionId__c</columns>
    <columns>PaymentAmount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payee_Type__c</field>
        <operation>equals</operation>
        <value>Other</value>
    </filters>
    <label>All --Todd Test</label>
</ListView>